# zkpoly-compiler

./: .gitignore  .gitmodules  Cargo.toml  Makefile.msm  README.md  readme.md  todo.txt  xmake.lua
compiler/: Cargo.toml  README.md
compiler/docs/: ast.md  type2-ir.md  type3-ir.md
compiler/src/: ast.rs  driver.rs  external.rs  heap.rs  lib.rs  reexports.rs  transit.rs  utils.rs
compiler/src/ast/: array.rs  builder.rs  lowering.rs  point.rs  poly_coef.rs  poly_lagrange.rs  scalar.rs  transcript.rs  tuple.rs  user_function.rs  whatever.rs
compiler/src/ast/lowering/: type_inferer.rs
compiler/src/driver/: artifect.rs  fresh_type2.rs  fresh_type3.rs  processed_type2.rs  processed_type3.rs  unfused_type2.rs
compiler/src/transit/: arith.rs  type1.rs  type2.rs  type3.rs
compiler/src/transit/type2/: arith_decide_mutable.rs  common_subexpression_elimination.rs  decide_device.rs  graph_scheduling.rs  intt_mending.rs  kernel_fusion.rs  lowering.rs  manage_inverse.rs  memory_planning.rs  mut_correction.rs  object_analysis.rs  precompute.rs  pretty.rs  pretty_print.rs  sliceable_subgraph.rs  subgraph_slicing.rs  template.rs  temporary_space.rs  typ.rs  user_function.rs  visualize.rs
compiler/src/transit/type3/: emit_func.rs  kernel_gen.rs  kernel_generation.rs  lowering.rs  pretty_print.rs  rewrite_extend.rs  track_splitting.rs  typ.rs
core/: Cargo.toml  README.md
core/src/: build_func.rs  cpu_kernels.rs  fused_kernels.rs  lib.rs  msm.rs  ntt.rs  poly.rs  poly_ptr.rs  tutorial.rs  xmake.lua
core/src/common/: xmake.lua
core/src/common/curve/: xmake.lua
core/src/common/iter/: xmake.lua
core/src/common/mont/: xmake.lua
core/src/fused_kernels/: .gitignore  kernel_gen.rs  partition.rs  scheduler.rs  xmake.lua  xmake.lua.template
core/src/fused_kernels/src/: ignore.cu
core/src/msm/: xmake.lua
core/src/msm/src/: msm.cu  msm.cuh  msm.h  msm_impl.cuh
core/src/msm/tests/: test_msm.cu
core/src/msm/tuning/: cost_model.py
core/src/ntt/: xmake.lua
core/src/ntt/src/: common.cuh  distribute_powers.cuh  distribute_zeta.cuh  ntt.cu  ntt.h  precompute.cuh  recompute_ntt.cuh  ssip_ntt.cuh
core/src/ntt/tests/: small_field.cuh  test_recompute.cu  test_ssip.cu
core/src/poly/: xmake.lua
core/src/poly/src/: batched_invert.cu  batched_invert.cuh  common.cuh  kate_division.cu  kate_division.cuh  permute.cu  permute.cuh  poly.cu  poly.h  poly_basic.cu  (+6 more)
core/src/tutorial/: xmake.lua
core/tests/: common.rs  cpu_kernels.rs  msm.rs  msm_halo2.rs  ntt.rs  poly.rs  tutorial.rs
memory_pool/: Cargo.toml  README.md  build.rs  xmake.lua
memory_pool/cpp/src/: memory_pool.cu
memory_pool/src/: buddy_disk_pool.rs  buddy_memory_pool.rs  cpu_pool.rs  lib.rs  memory_pool.rs  pinned_pool.rs  static_allocator.rs  swap_page_pool.rs
memory_pool/tests/: buddy_memory_pool_integration_tests.rs  memory_pool_integration_tests.rs  swap_integration_test.rs  swap_page_pool_stress_tests.rs  swap_page_pool_tests.rs
runtime/: Cargo.toml  README.md  xmake.lua
runtime/docs/: instructions.md
runtime/src/: alloc.rs  any.rs  args.rs  async_rng.rs  constants.rs  debug.rs  devices.rs  error.rs  functions.rs  gpu_buffer.rs  instructions.rs  lib.rs  mem.rs  point.rs  point_base.rs  poly.rs  run.rs  runtime.rs  scalar.rs  scaler.rs  scheduler.rs  transcript.rs  transfer.rs  transport.rs  typ.rs  user_functions.rs
runtime/src/args/: serialization.rs
runtime/src/cuda_api/: Cargo.toml  build.rs
runtime/src/debug/: statistics.rs
runtime/src/functions/: build_func.rs  load_dynamic.rs  ntt.rs  poly.rs  resolve_type.rs  run_xmake.rs  tutorial.rs  xmake.lua
runtime/src/memory_pool/: Cargo.toml  build.rs
runtime/src/runtime/: alloc.rs  assert_eq.rs  transfer.rs
runtime/tests/: simple_instruction.rs  slice_and_transport.rs  slice_rotate_transport.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs  scheduler.rs
scheduler/src/scheduler/: core.rs  erased.rs  submitter.rs
(+158 files in other folders)
