[package]
name = "zkpoly_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkpoly_runtime = { path = "../runtime" }
zkpoly_common = { path = "../common" }
zkpoly_core = { path = "../core" }
zkpoly_memory_pool = { path = "../memory_pool" }
zkpoly_cuda_api = { path = "../cuda_api" }
cytoscape_visualizer ={ path = "../cytoscape_visualizer" }
halo2curves = { version = "0.6.0", default-features = false }
group = "0.13"
