[package]
name = "zkpoly_core"
version = "0.1.0"
edition = "2021"

[dependencies]
zkpoly_runtime = { path = "../runtime" }
zkpoly_cuda_api = { path = "../cuda_api" }
zkpoly_common = { path = "../common" }
libloading = "0.8"
group = "0.13"
serde = { version = "1.0", features = ["derive"] }
zkpoly_memory_pool = { path = "../memory_pool" }

[dev-dependencies]
rand_xorshift = "0.3.0"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git ", tag = "v0.3.0", features =  ["circuit-params", "derive_serde"] }
halo2curves = { version = "0.6.0", default-features = false }
rand_core = { version = "0.6", default-features = false }
rayon = "1.5.1"