[package]
name = "zkpoly_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
zkpoly_common = { path = "../common" }
zkpoly_memory_pool = { path = "src/memory_pool" }
zkpoly_cuda_api = { path = "src/cuda_api" }
group = "0.13"
threadpool = "1.8.0"
pasta_curves = "0.5.1"
blake2b_simd = "1" # MSRV 1.66.0
sha3 = "0.9.1"
halo2curves = { version = "0.6.0", default-features = false }
libloading = "0.8"
rand_core = { version = "0.6", default-features = false }
[dev-dependencies]
rand_xorshift = "0.3.0"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git ", tag = "v0.3.0", features =  ["circuit-params", "derive_serde"] }